--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <section class="hero snap-target section">
         <h1 class="hero__title ml-5">Дивіться ТБ та кіно без реклами в єдиній передплаті</h1>
         <p class="hero__text ml-5">Популярні телеканали та величезна бібліотека фільмів, серіалів, мультфільмів, трансляцій у єдиній передплаті.</p>
-        <button class="hero__scroll-btn" >
+        <button class="hero__scroll-btn bounce" >
           <svg width="14" height="8" viewBox="0 0 14 8" fill="none">
             <path opacity="0.8" d="M7 6.49988L13.044 0.662174C13.2627 0.451801 13.6173 0.451801 13.836 0.662174C14.0547 0.872547 14.0547 1.21363 13.836 1.424L7 7.99988L0.16402 1.424C-0.0546734 1.21363 -0.0546734 0.872547 0.16402 0.662174C0.382714 0.451801 0.737286 0.451801 0.95598 0.662174L7 6.49988Z" fill="white"/>
           </svg>
